--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -1,25 +1,38 @@
 /* Styles for the overall container */
 .login-container {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center; /* Center everything vertically */
   height: 100vh;
-  background-image: url('../assets/background1.png'); 
-  background-size: cover;
-  background-position: center;
   color: rgb(0, 0, 0); 
   text-align: center; /* Center text horizontally */
 }
 
-.tamil-text {
-  font-size: 1rem;
-  margin-top: 2rem; 
-  margin-bottom: 120px; 
+.login-container::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: url('../assets/background1.png'); 
+  background-size: cover;
+  background-position: center;
+  opacity: 0.7; /* Adjust this value for desired opacity */
+  z-index: -1; /* Place it behind the content */
+}
+
+.login-form-container {
+  position: relative; /* Ensure it stays above the background */
+}
+
+
+.logo {  
   width: 100%; 
-  max-width: 800px; 
-  line-height: 1; 
-  color: #000000; 
+  max-width: 400px; 
+  line-height: 1;  
 }
 
 /* Styles for the form container */
@@ -27,16 +40,17 @@
   display: flex;
   justify-content: center; 
   width: 100%;
+  padding-bottom: 130px;
 }
 
 .login-form {
+  padding-bottom: 50px;
   padding: 2rem;
-  padding-bottom: 150px;
   border-radius: 8px;
-  margin-bottom: 50px;
   width: 100%;
   max-width: 400px;
-  background: rgba(255, 255, 255, 0); /* Slightly opaque background */
+  background: rgba(0, 0, 0, 0.639); /* Slightly opaque background */
+  position: static  ;
 }
 
 /* Styles for input fields */
@@ -84,4 +98,8 @@
 .register-link a {
   color: #007bff;
   text-decoration: none;
+}
+h2 {
+  color :aliceblue;
+  position :relative;
 }
